<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:layout_alignParentStart = "true"
    android:layout_alignParentTop = "true"
    android:background = "@color/colorLightGrey" >

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:orientation = "vertical" >
        <!-- All images included here, are taken by google search. -->
        <ImageView
            android:id = "@+id/business_logo"
            android:layout_width = "match_parent"
            android:layout_height = "@dimen/_193dp"
            android:scaleType = "fitStart"
            app:srcCompat = "@drawable/udacity12"
            tools:ignore = "ContentDescription" />

        <TextView
            android:id = "@+id/greeting"
            android:layout_width = "match_parent"
            android:layout_height = "@dimen/_125dp"

            android:background = "@color/colorWhite"
            android:fontFamily = "sans-serif"
            android:paddingTop = "@dimen/padding_top"
            android:text = "@string/welcome_text"
            android:textAlignment = "center"
            android:textColor = "@color/colorBlack"
            android:textSize = "@dimen/text_size_1" />

        <ImageView
            android:id = "@+id/business_image"
            android:layout_width = "match_parent"
            android:layout_height = "@dimen/_240dp"
            android:scaleType = "centerInside"
            app:srcCompat = "@drawable/udacitygoogle"
            tools:ignore = "ContentDescription" />

        <TextView
            android:id = "@+id/name_of_business"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginStart = "@dimen/margin_start"
            android:text = "@string/business_name"
            android:textColor = "@color/colorWhite"
            android:textSize = "@dimen/text_size" />

        <TextView
            android:id = "@+id/contact_number"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginStart = "@dimen/margin_start"
            android:text = "@string/business_number"
            android:textColor = "@color/colorWhite"
            android:textSize = "@dimen/text_size"

            />

        <TextView
            android:id = "@+id/website"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginStart = "@dimen/margin_start"
            android:text = "@string/business_website"
            android:textColor = "@color/colorWhite"
            android:textSize = "@dimen/text_size" />

        <TextView
            android:id = "@+id/address"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginBottom = "@dimen/margin_bottom"
            android:layout_marginStart = "@dimen/margin_start"
            android:text = "@string/business_address"
            android:textColor = "@color/colorWhite"
            android:textSize = "@dimen/text_size" />

    </LinearLayout >
</ScrollView >

